--- a/GRAPH.html
+++ b/GRAPH.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            
+
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
               <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
@@ -56,7 +56,7 @@
                        </div>
                        <br/>
 
-                       <button type="submit" class="btn btn-primary">Submit</button>
+                       <button type="submit" class="btn btn-primary">Plot</button>
 
                     </form>
                 </div>
