--- a/GRAPH.html
+++ b/GRAPH.html
@@ -41,15 +41,15 @@
                        <div class="form-group">
                        <div class="row">
                         <label>Limits:</label>
-                        <div class="col-sm-3"><input type="text" class="form-control" id="from" placeholder="from" name="from"></div>
-                        <div class="col-sm-3"><input type="text" class="form-control" id="to" placeholder="to" name="to"></div>
+                        <div class="col-sm-3"><input type="number" class="form-control" id="from" placeholder="from" name="from"></div>
+                        <div class="col-sm-3"><input type="number" class="form-control" id="to" placeholder="to" name="to"></div>
                        </div>
                        <br/>
 
                        <div class="row ">
                         <label>Epsilon( 10^(-n) ):</label>
                         <div class="col-sm-2">
-                            <input type="text" class="form-control" id="eps" placeholder="n" name="eps">
+                            <input type="number" class="form-control" id="eps" placeholder="n" name="eps">
                         </div>
                        </div>
 
